--- a/fjij/home-manager/dotfiles/tmux/tmux.conf
+++ b/fjij/home-manager/dotfiles/tmux/tmux.conf
@@ -52,7 +52,7 @@ unbind C-b
 set -g prefix C-g
 
 # Reload conf
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 
 # Window navigation
 bind-key h select-pane -L
