Tmux: support color in alacritty

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -10,10 +10,12 @@
 # If TERM outside of tmux is xterm-256color, then enable Tc (true color)
 # Debugging: `tmux info | grep Tc`
 set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",alacritty:Tc"
 
 # If TERM outside of tmux is xterm-256color, then enable RGB
 # Debugging: `tmux info | grep RGB`
 set -ga terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ",alacritty:RGB"
 
 # Tabs
 set -g base-index 1
