--- a/dotfiles/alacritty/themes/night_owl.toml
+++ b/dotfiles/alacritty/themes/night_owl.toml
@@ -1,45 +1,4 @@
 # Default colors
-[colors.primary]
-background = "#011627"
-foreground = "#d6deeb"
-
-# Cursor colors
-[colors.cursor]
-text = "CellBackground"
-cursor = "CellForeground"
-
-[colors.vi_mode_cursor]
-text = "CellBackground"
-cursor = "#22da6e"
-
-# Search colors
-[colors.search.matches]
-foreground = "#000000"
-background = "#22da6e"
-
-[colors.search.focused_match]
-foreground = "#ffffff"
-background = "#22da6e"
-
-[colors.footer_bar]
-foreground = "#ffffff"
-background = "#1d3b53"
-
-# Selection colors
-[colors.selection]
-text = "#ffffff"
-background = "#0d486e"
-
-# Normal colors
-[colors.normal]
-black = "#011627"
-red = "#EF5350"
-green = "#22da6e"
-yellow = "#c5e478"
-blue = "#82AAFF"
-magenta = "#C792EA"
-cyan = "#21c7a8"
-white = "#ffffff"
 
 # Bright colors
 [colors.bright]
@@ -52,3 +11,45 @@ magenta = "#C792EA"
 cyan = "#7fdbca"
 white = "#ffffff"
 
+# Cursor colors
+[colors.cursor]
+text = "CellBackground"
+cursor = "CellForeground"
+
+[colors.footer_bar]
+foreground = "#ffffff"
+background = "#1d3b53"
+
+# Normal colors
+[colors.normal]
+black = "#011627"
+red = "#EF5350"
+green = "#22da6e"
+yellow = "#c5e478"
+blue = "#82AAFF"
+magenta = "#C792EA"
+cyan = "#21c7a8"
+white = "#ffffff"
+
+[colors.primary]
+background = "#011627"
+foreground = "#d6deeb"
+[colors.search]
+
+[colors.search.focused_match]
+foreground = "#ffffff"
+background = "#22da6e"
+
+# Search colors
+[colors.search.matches]
+foreground = "#000000"
+background = "#22da6e"
+
+# Selection colors
+[colors.selection]
+text = "#ffffff"
+background = "#0d486e"
+
+[colors.vi_mode_cursor]
+text = "CellBackground"
+cursor = "#22da6e"
