--- a/dotfiles/alacritty/alacritty.toml
+++ b/dotfiles/alacritty/alacritty.toml
@@ -1,13 +1,3 @@
-[font]
-size = 20
-
-[font.normal]
-family = "ComicCodeLigatures Nerd Font"
-
-[font.offset]
-x = -1
-y = 0
-
 [general]
 import = [
   # "~/.config/alacritty/themes/moonlight_ii_vscode.toml"
@@ -18,6 +8,17 @@ import = [
   # "~/.config/alacritty/themes/baitong.toml"
   "~/.config/alacritty/themes/night_owl.toml"
 ]
+
+[font]
+size = 20
+
+[font.normal]
+family = "ComicCodeLigatures Nerd Font"
+# family = "Codelia Nerd Font"
+
+[font.offset]
+x = -1
+y = 0
 
 [window]
 dynamic_padding = true
