--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -27,7 +27,7 @@ jobs:
         uses: tailscale/gitops-acl-action@v1
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-client-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
+          oauth-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
           tailnet: ${{ secrets.TS_TAILNET }}
           action: apply
 
@@ -37,6 +37,6 @@ jobs:
         uses: tailscale/gitops-acl-action@v1
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-client-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
+          oauth-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
           tailnet: ${{ secrets.TS_TAILNET }}
           action: test
